--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.4",
-    "socket.io": "^1.4.5"
+    "socket.io": "^1.4.5",
+    "gulp": "~3.9.1",
+    "body-parser": "~1.15.0",
+    "mongoose": "~4.4.10",
+    "gulp-nodemon": "~2.0.6"
   }
 }
