--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "body-parser": "~1.15.0",
     "mongoose": "~4.4.10",
     "gulp-nodemon": "~2.0.6",
-    "lodash": "~4.8.1"
+    "lodash": "~4.8.1",
+    "gulp-mocha": "~2.2.0",
+    "chai": "~3.5.0"
   }
 }
